[tool.poetry]
name = "tempocom"
version = "0.1.0"
description = "Application de gestion de réseau de transport"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
folium = "^0.15.1"
pandas = "^2.2.0"
numpy = "^1.26.0"
scipy = "^1.12.0"
streamlit = "^1.44.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 